--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-html, body {
+/*html, body {
   background: yellow;
+}*/
+
+h1 {
+  text-align: center;
+}
+
+.icon {
+  text-align: center;
+  display: block;
 }
