--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  background: yellow;
+  /*background: yellow;*/
 }
 
 /*h1 {
@@ -7,159 +7,110 @@ text-align: center;
 }*/
 
 /*.icon {
-  text-align: center;
-  display: block;
+text-align: center;
+display: block;
 }*/
-
-/** {
-  padding: 0;
+.set3d {
   margin: 0;
-}*/
-
-/*body {
-  position: relative;
-  font-family: 'Open Sans', sans-serif;
-}*/
-
-.wrapper {
-  width: 100%;
-  height: 100vh;
-  background: #1D1313;
-  position: absolute;
-  overflow: hidden;
-}
-
-span {
-  z-index: 9999;
-  position: absolute;
-  top: 20px;
-  left: 10px;
-  width: 35px;
-  height: 40px;
-  background: blue;
-  cursor: pointer;
-}
-&:before, &:after {
-  display: block;
-  position: absolute;
-  content: '';
-  left: 0;
-  height: 4px;
-  width: 35px;
-  background: #ffffff;
-}
-&:before {
-  top: -8px;
-}
-&:after {
-  bottom: -8px;
-}
-}
-
-.title {
-  /*position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 100px;
-  margin-top: -50px;
-  width: 50%;
-  margin-left: -25%;
-  text-align: center;*/
-  color: #30C4C9;
-}
-
-.overlay {
-  position: absolute;
-  bottom: -99%;
+  -moz-perspective: 800px;
+  -webkit-perspective: 800px;
+  perspective: 800px;
+  -moz-perspective-origin: 0% 50%;
+  -webkit-perspective-origin: 0% 50%;
+  perspective-origin: 0% 50%;
   height: 100%;
-  background: #30C4C9;
-  left: 0;
   width: 100%;
-  transition: all 0.5s ease;
-}
-&.anim {
-  left: 0;
-  bottom: 0;
-  animation: menu-anim 1.5s 1 ease-out normal;
-  width: 25%;
-  transition: all 0.5s ease;
-}
-&.reverse-anim {
-  left: 0;
-  bottom: 0;
-  animation: menu-anim 1.5s 1 ease-out reverse;
-  width: 25%;
-  transition: all 0.5s ease;
 }
 
-ul {
-  width: 100%;
-  text-align: center;
-  margin-top: 100px;
-  padding-left: 0;
-  margin-left: -10px;
-  font-size: 2em;
-  font-weight: 800;
-}
-li {
-  margin: 10px 0;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  position: relative;
-  display: inline-block;
-  padding: 10px 0;
-  overflow: hidden;
-}
-
-&:after {
+#trigger {
+  position: absolute;
+  width: 50px;
+  height: 100%;
   display: block;
-  border-radius: 2px;
-  content: '';
-  left: 0;
-  bottom: -10px;
-  height: 5px;
-  background: #ffffff;
-  transform: translateX(-101%);
-  &:hover {
-    text-decoration: none;
-  }
-  &:after {
-    animation: border-anim 0.5s 1 ease normal;
-    transform: translateX(0);
-  }
+  right: -50px;
+  background: transparent;
+  top: 0;
 }
 
-@-webkit-keyframes border-anim {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(0);
-  }
+#menu {
+  display: block;
+  position: fixed;
+  background: #333;
+  color: #eee;
+  height: 100%;
+  width: 320px;
+  top: 0;
+  left: 0px;
+  z-index: 2;
+  margin: 0px;
+  padding: 20px;
+  -webkit-transform: rotateY(-30deg) translateX(-100%);
+  -moz-transform: rotateY(-30deg) translateX(-100%);
+  -ms-transform: rotateY(-30deg) translateX(-100%);
+  -o-transform: rotateY(-30deg) translateX(-100%);
+  transform: rotateY(-30deg) translateX(-100%);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: -webkit-transform .4s ease;
+  -moz-transition: -moz-transform .4s ease;
+  -ms-transition: -ms-transform .4s ease;
+  -o-transition: -o-transform .4s ease;
+  transition: transform .4s ease;
+  -webkit-transform-origin: 0% 50%;
+  -moz-transform-origin: 0% 50%;
+  -ms-transform-origin: 0% 50%;
+  -o-transform-origin: 0% 50%;
+  transform-origin: 0% 50%;
 }
-@-webkit-keyframes menu-anim {
-  0% {
-    left: 0;
-    bottom: -99%;
-    width: 100%;
-  }
-  33% {
-    left: -99.5%;
-    bottom: -99%;
-    width: 100%;
-  }
-  66% {
-    left: -99.5%;
-    bottom: 0;
-    width: 100%;
-  }
-  100% {
-    bottom: 0;
-    left: 0;
-    width: 25%;
-  }
+
+#menu:hover {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+
+#content {
+  background: #000;
+  width: 100%;
+  height: 100%;
+  background-color: #1f1f1f;
+ *zoom: 1;
+ filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FF1F1F1F', endColorstr='#FF000000');
+  background-image: -moz-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+  background-image: -webkit-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+  background-image: radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+}
+
+#content {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: -webkit-transform .4s ease;
+  -moz-transition: -moz-transform .4s ease;
+  -ms-transition: -ms-transform .4s ease;
+  -o-transition: -o-transform .4s ease;
+  transition: transform .4s ease;
+  -webkit-transform-origin: 0% 50%;
+  -moz-transform-origin: 0% 50%;
+  -ms-transform-origin: 0% 50%;
+  -o-transform-origin: 0% 50%;
+  transform-origin: 0% 50%;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.active #content {
+  -webkit-transform: translateX(300px) rotateY(15deg);
+  -moz-transform: translateX(300px) rotateY(15deg);
+  -ms-transform: translateX(300px) rotateY(15deg);
+  -o-transform: translateX(300px) rotateY(15deg);
+  transform: translateX(300px) rotateY(15deg);
+}
+
+h1, p {
+  color: grey;
 }
