--- a/style.css
+++ b/style.css
@@ -1,23 +1,20 @@
 /*html, body {
   background: yellow;
-}*/
+}
 
 ul {
   list-style-type: none;
 }
 
+h1 {
+  text-align: center;
+}
 
-
-
-/*h1 {
-text-align: center;
-}*/
-
-/*.icon {
-text-align: center;
-display: block;
-}*/
-/*.set3d {
+.icon {
+  text-align: center;
+  display: block;
+}
+.set3d {
   margin: 0;
   -moz-perspective: 800px;
   -webkit-perspective: 800px;
@@ -27,97 +24,102 @@ display: block;
   perspective-origin: 0% 50%;
   height: 100%;
   width: 100%;
-}*/
+}
 
 /*#trigger {
-  position: absolute;
-  width: 50px;
-  height: 100%;
-  display: block;
-  right: -50px;
-  background: transparent;
-  top: 0;
-}*/
-/*
+position: absolute;
+width: 50px;
+height: 100%;
+display: block;
+right: -50px;
+background: transparent;
+top: 0;
+}
 #menu {
-  display: block;
-  position: fixed;
-  background: #333;
-  color: #eee;
-  height: 100%;
-  width: 320px;
-  top: 0;
-  left: 0px;
-  z-index: 2;
-  margin: 0px;
-  padding: 20px;
-  -webkit-transform: rotateY(-30deg) translateX(-100%);
-  -moz-transform: rotateY(-30deg) translateX(-100%);
-  -ms-transform: rotateY(-30deg) translateX(-100%);
-  -o-transform: rotateY(-30deg) translateX(-100%);
-  transform: rotateY(-30deg) translateX(-100%);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: -webkit-transform .4s ease;
-  -moz-transition: -moz-transform .4s ease;
-  -ms-transition: -ms-transform .4s ease;
-  -o-transition: -o-transform .4s ease;
-  transition: transform .4s ease;
-  -webkit-transform-origin: 0% 50%;
-  -moz-transform-origin: 0% 50%;
-  -ms-transform-origin: 0% 50%;
-  -o-transform-origin: 0% 50%;
-  transform-origin: 0% 50%;
+display: block;
+position: fixed;
+background: #333;
+color: #eee;
+height: 100%;
+width: 320px;
+top: 0;
+left: 0px;
+z-index: 2;
+margin: 0px;
+padding: 20px;
+-webkit-transform: rotateY(-30deg) translateX(-100%);
+-moz-transform: rotateY(-30deg) translateX(-100%);
+-ms-transform: rotateY(-30deg) translateX(-100%);
+-o-transform: rotateY(-30deg) translateX(-100%);
+transform: rotateY(-30deg) translateX(-100%);
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+-webkit-transition: -webkit-transform .4s ease;
+-moz-transition: -moz-transform .4s ease;
+-ms-transition: -ms-transform .4s ease;
+-o-transition: -o-transform .4s ease;
+transition: transform .4s ease;
+-webkit-transform-origin: 0% 50%;
+-moz-transform-origin: 0% 50%;
+-ms-transform-origin: 0% 50%;
+-o-transform-origin: 0% 50%;
+transform-origin: 0% 50%;
 }
 
 #menu:hover {
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  transform: rotateY(0deg);
+-webkit-transform: rotateY(0deg);
+-moz-transform: rotateY(0deg);
+-ms-transform: rotateY(0deg);
+-o-transform: rotateY(0deg);
+transform: rotateY(0deg);
 }
 
 #content {
-  background: #000;
-  width: 100%;
-  height: 100%;
-  background-color: #1f1f1f;
- *zoom: 1;
- filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FF1F1F1F', endColorstr='#FF000000');
-  background-image: -moz-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
-  background-image: -webkit-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
-  background-image: radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+background: #000;
+width: 100%;
+height: 100%;
+background-color: #1f1f1f;
+*zoom: 1;
+filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FF1F1F1F', endColorstr='#FF000000');
+background-image: -moz-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+background-image: -webkit-radial-gradient(center, ellipse cover, red 0%, #000000 100%);
+background-image: radial-gradient(center, ellipse cover, red 0%, #000000 100%);
 }
 
 #content {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: -webkit-transform .4s ease;
-  -moz-transition: -moz-transform .4s ease;
-  -ms-transition: -ms-transform .4s ease;
-  -o-transition: -o-transform .4s ease;
-  transition: transform .4s ease;
-  -webkit-transform-origin: 0% 50%;
-  -moz-transform-origin: 0% 50%;
-  -ms-transform-origin: 0% 50%;
-  -o-transform-origin: 0% 50%;
-  transform-origin: 0% 50%;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+-webkit-transition: -webkit-transform .4s ease;
+-moz-transition: -moz-transform .4s ease;
+-ms-transition: -ms-transform .4s ease;
+-o-transition: -o-transform .4s ease;
+transition: transform .4s ease;
+-webkit-transform-origin: 0% 50%;
+-moz-transform-origin: 0% 50%;
+-ms-transform-origin: 0% 50%;
+-o-transform-origin: 0% 50%;
+transform-origin: 0% 50%;
+width: 100%;
+height: 100%;
+overflow-y: auto;
 }
 
 .active #content {
-  -webkit-transform: translateX(300px) rotateY(15deg);
-  -moz-transform: translateX(300px) rotateY(15deg);
-  -ms-transform: translateX(300px) rotateY(15deg);
-  -o-transform: translateX(300px) rotateY(15deg);
-  transform: translateX(300px) rotateY(15deg);
+-webkit-transform: translateX(300px) rotateY(15deg);
+-moz-transform: translateX(300px) rotateY(15deg);
+-ms-transform: translateX(300px) rotateY(15deg);
+-o-transform: translateX(300px) rotateY(15deg);
+transform: translateX(300px) rotateY(15deg);
 }
 
 h1, p {
-  color: grey;
+color: grey;
 }*/
+
+
+h1 {
+  text-align: center;
+  color: blue;
+}
